--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -13,7 +13,8 @@
   </head>
   <body>
     <header class="app-header">
-      <a href="/"><img class="app-header-avatar" src="{{ .Site.Params.avatarPath }}" /></a>
+      <div class="app-header-inner">
+        <a href="/"><img class="app-header-avatar" src="{{ .Site.Params.avatarPath }}" /></a>
       <h1>{{ .Site.Title }}</h1>
       <p>{{ .Site.Params.description | default "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vehicula turpis sit amet elit pretium." }}</p>
       <div class="app-header-social">
@@ -21,7 +22,8 @@
           <a target="_blank" href="{{ .url }}">{{ partial "icon.html" .name }}</a>
         {{ end }}
       </div>
-      <ul>
+      </div>
+      <ul class="app-menu">
         {{ range .Site.Menus.main }}
           <li><a href="{{ .URL }}">{{ .Name }}</a></li>
         {{ end }}
