--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,3 +1,5 @@
+$menu-font: {{ .Site.Params.menuFont | default "Myriad Pro" }};
+$menu-hover-color: {{ .Site.Params.style.darkestColor | default "#161c26" }};
 $darkest-color: {{ .Site.Params.style.darkestColor | default "#242930" }};
 $dark-color: {{ .Site.Params.style.darkColor | default "#353b43" }};
 $light-color: {{ .Site.Params.style.lightColor | default "#afbac4" }};
@@ -6,6 +8,26 @@ $primary-color: {{ .Site.Params.style.primaryColor | default "#57cc8a" }};
 
 * {
   box-sizing: border-box;
+}
+
+.app-menu {
+  padding: 0;
+  width: 100%;
+  list-style-type: none;
+}
+
+.app-menu li:hover {
+    background-color:$menu-hover-color;
+}
+
+.app-menu li {
+    width:100%;
+    height:30px;
+    text-align:center;
+    line-height:30px;
+    font:$menu-font;
+    font-size:14px;
+    padding-right:10px;
 }
 
 html {
@@ -37,8 +59,11 @@ pre {
   overflow: auto;
 }
 
-.app-header {
+.app-header-inner {
   padding: 2.5em;
+}
+
+.app-header {
   background: $darkest-color;
   text-align: center;
 }
@@ -87,10 +112,20 @@ pre {
 }
 
 .post-content {
+  img{
+    width:100%;
+    max-width:880px;
+  }
   pre {
     border-left: 0.4em solid rgba($primary-color, .8);
     padding-left: 1em;
   }
+}
+
+.post-content figcaption {
+    p {
+    text-align: center;
+    }
 }
 
 .post-meta {
